Some changes to use the new BKCommonLib

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: Redstone Mania
 main: com.bergerkiller.bukkit.rm.RedstoneMania
-version: 0.01
+version: 0.03
 author: bergerkiller
+depend: [BKCommonLib]
 description: Plugin to virtualize redstone
 commands:
     circuit:
