--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Redstone Mania
 main: com.bergerkiller.bukkit.rm.RedstoneMania
-version: 0.06
+version: 1.01
 author: bergerkiller
 depend: [BKCommonLib]
 description: Plugin to virtualize redstone
@@ -8,4 +8,4 @@ commands:
     circuit:
         description: Redstone Mania main command
         aliases: [redstone, rm]
-        usage: TODO
+        usage: See Redstone Mania documentation page
